test/error/error.input129.zc
Cannot ++ and/or -- more than once on line 6
